BUG: 120790

Do not reports that the user has a webcam when it is not configured or available.


svn path=/branches/work/kopete/dev-0.12/kopete/; revision=503065